--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,30 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Instagrapher</title>
     <link rel="stylesheet" href="/style.css" />
+    <script src="https://unpkg.com/d3@7.0.0/dist/d3.min.js"></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app">Hello World!</div>
+    <svg width="960" height="500">
+    </svg>
   </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+		<title>D3: A simple packed Bubble Chart</title>
+		<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+    <script defer src="/bundle.js"></script>
+
+</head>
+<body>
+</body>
 </html>
